--- a/about.html
+++ b/about.html
@@ -29,15 +29,15 @@
   <body>
 	  <nav class="navbar navbar-expand-lg navbar-dark ftco_navbar bg-dark ftco-navbar-light" id="ftco-navbar">
 	    <div class="container">
-	      <a class="navbar-brand" href="index.html">Social Angels<span></span></a>
+	      <a class="navbar-brand" href="index.html">Aid<span>.</span></a>
 	      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#ftco-nav" aria-controls="ftco-nav" aria-expanded="false" aria-label="Toggle navigation">
 	        <span class="oi oi-menu"></span> Menu
 	      </button>
 
 	      <div class="collapse navbar-collapse" id="ftco-nav">
 	        <ul class="navbar-nav ml-auto">
-	        	<li class="nav-item active"><a href="index.html" class="nav-link">Home</a></li>
-	        	<li class="nav-item"><a href="about.html" class="nav-link">Who we are</a></li>
+	        	<li class="nav-item"><a href="index.html" class="nav-link">Home</a></li>
+	        	<li class="nav-item active"><a href="about.html" class="nav-link">Who we are</a></li>
 	        	<li class="nav-item"><a href="causes.html" class="nav-link">Causes</a></li>
 	        	<li class="nav-item"><a href="blog.html" class="nav-link">Stories</a></li>
 	          <li class="nav-item"><a href="contact.html" class="nav-link">Contact</a></li>
@@ -47,43 +47,39 @@
 	  </nav>
     <!-- END nav -->
     
-    <div class="hero-wrap" style="background-image: url('images/bg_1.jpg');" data-stellar-background-ratio="0.5">
+    <section class="hero-wrap hero-wrap-2" style="background-image: url('images/bg_2.jpg');" data-stellar-background-ratio="0.5">
       <div class="overlay"></div>
       <div class="container">
-        <div class="row no-gutters slider-text align-items-center justify-content-end" data-scrollax-parent="true">
-          <div class="col-md-6 order-md-last ftco-animate mt-5" data-scrollax=" properties: { translateY: '70%' }">
-            <h1 class="mb-4" data-scrollax="properties: { translateY: '30%', opacity: 1.6 }">We can help to save the world</h1>
-            <p><a href="#" class="btn btn-black py-3 px-4">How Can I Help</a></p>
-          </div>
-          <div class="col-md-6 d-none d-md-block">
-          	</div>
+        <div class="row no-gutters slider-text js-fullheight align-items-end justify-content-center">
+          <div class="col-md-9 ftco-animate pb-5 text-center">
+            <h2 class="mb-3 bread">About Us</h2>
+            <p class="breadcrumbs"><span class="mr-2"><a href="index.html">Home <i class="ion-ios-arrow-forward"></i></a></span> <span>About us <i class="ion-ios-arrow-forward"></i></span></p>
           </div>
         </div>
       </div>
-    </div>
-
-    <section class="ftco-section ftco-no-pt ftco-no-pb ftco-volunteer">
+    </section>
+		
+		<section class="ftco-counter img ftco-section ftco-no-pt ftco-no-pb">
     	<div class="container">
-    		<div class="row">
-    			<div class="col-md-7 img-volunteer" style="background-image: url(images/about.jpg);">
-    				<div class="row no-gutters justify-content-end">
-    					<div class="col-lg-7">
-    						<div class="text py-5 pl-md-4 pr-md-3">
-    							<h2 class="mb-4">We need volunteers in Africa</h2>
-    							<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics</p>
-    							<p><a href="#" class="btn btn-primary py-3 px-4">Join now</a></p>
-    						</div>
-    					</div>
+    		<div class="row d-flex">
+    			<div class="col-md-6 col-lg-5 d-flex">
+    				<div class="img d-flex align-self-stretch align-items-center" style="background-image:url(images/about-1.jpg);">
     				</div>
     			</div>
-    			<div class="col-md-5 d-flex align-items-center bg-black">
-    				<div class="about-text py-5 pl-md-5">
-    					<h2>Donation so far <span>$</span><strong class="number" data-number="380000">0</strong></h2>
-    					<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics</p>
-    					<p><a href="#" class="btn btn-black py-3 px-4">Donate now</a></p>
-    				</div>
-    			</div>
-    		</div>
+    			<div class="col-md-6 col-lg-7 pl-lg-5 py-5">
+    				<div class="py-md-5">
+	    				<div class="row justify-content-start pb-3">
+			          <div class="col-md-12 heading-section ftco-animate">
+			          	<span class="subheading">A Few Words About Us</span>
+			            <h2 class="mb-4">We Voluntary Help for Almost <span class="number" data-number="100">0</span> Years</h2>
+			            <p>A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth.</p>
+			            <p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic life One day however a small line of blind text by the name of Lorem Ipsum decided to leave for the far World of Grammar.</p>
+			            <p>A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth.</p>
+			          </div>
+			        </div>
+		        </div>
+	        </div>
+        </div>
     	</div>
     </section>
 
@@ -130,52 +126,23 @@
       </div>
     </section>
 
-    <section class="ftco-section ftco-causes">
+    <section class="ftco-mission">
     	<div class="container">
-    		<div class="row justify-content-center pb-3">
-          <div class="col-md-10 heading-section text-center ftco-animate">
-            <h2 class="mb-4">Let's build the world without child abuse and neglect</h2>
-            <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia</p>
-          </div>
-        </div>
-    	</div>
-    	<div class="container">
-        <div class="row">
-        	<div class="col-md-12">
-        		<div class="carousel-causes owl-carousel">
-        			<div class="item">
-		        		<a href="causes.html" class="causes text-center">
-		        			<div class="img" style="background-image: url(images/causes-1.jpg);"></div>
-		        			<h2>Adoption, Fostering &amp; Children Care</h2>
-		        		</a>
-        			</div>
-        			<div class="item">
-	        			<a href="causes.html" class="causes text-center">
-		        			<div class="img" style="background-image: url(images/causes-2.jpg);"></div>
-		        			<h2>Disadvantages Young People</h2>
-		        		</a>
-	        		</div>
-	        		<div class="item">
-	        			<a href="causes.html" class="causes text-center">
-		        			<div class="img" style="background-image: url(images/causes-3.jpg);"></div>
-		        			<h2>Meditation &amp; Crisis Services</h2>
-		        		</a>
-	        		</div>
-	        		<div class="item">
-	        			<a href="causes.html" class="causes text-center">
-		        			<div class="img" style="background-image: url(images/causes-4.jpg);"></div>
-		        			<h2>Providing Children Care and Education</h2>
-		        		</a>
-	        		</div>
-	        		<div class="item">
-	        			<a href="causes.html" class="causes text-center">
-		        			<div class="img" style="background-image: url(images/causes-5.jpg);"></div>
-		        			<h2>Safeguarding &amp; Consultancy Services</h2>
-		        		</a>
-	        		</div>
-        		</div>
-        	</div>
-        </div>
+    		<div class="row">
+    			<div class="col-md-4 py-4 py-md-5 ftco-animate">
+    				<div class="py-md-4 pb-md-5">
+	    				<h3>Mission: To Change the Life of Those, Who Have no Hope!</h3>
+	    				<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
+    				</div>
+    			</div>
+    			<div class="col-md-4 py-4 py-md-5 ftco-animate">
+    				<div class="py-md-4 pb-md-5">
+	    				<h3>Vission</h3>
+	    				<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
+    				</div>
+    			</div>
+    			<div class="col-md-4 py-4 py-md-5 img" style="background-image: url(images/bg_1.jpg)"></div>
+    		</div>
     	</div>
     </section>
    	
